bk_ida/gccida/c3/recog_9
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10259:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10260:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1a = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10267:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10271:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10276:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10291:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10292:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10302:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10303:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( target_flags & 1) != 0 && ix86_unary_operator_ok( NEG, TFmode, recog_data_0.operand) && pnum_clobbers ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10317:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10319:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10320:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10329:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10331:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[0] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10332:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10343:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10344:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( target_flags & 1) != 0 && ix86_unary_operator_ok( ABS, TFmode, recog_data_0.operand) && pnum_clobbers ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10350:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1b = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/insn-recog.c:10361:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_9/src/obj/insn-recog.o] Error 1
